...
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="Session"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/ac_session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

...
